Prepares ges subdirectory to compile the paper for there

--- a/escrito/urge11.tex
+++ b/escrito/urge11.tex
@@ -72,7 +72,7 @@
 %\begin{center} \textbf{$\rightarrow$~~Preliminary draft~~$\leftarrow$} \\ (please inquire for new version, \small{\url{emagar@itam.mx}})  \end{center}
 
 \begin{abstract}
-\noindent Among the Chilean President's formidable proactive legislative powers is fast-track authority, also called urgency authority. Lawmakers face a short deadline to discuss and vote bills in this track. Extant research has shown that most executive proposals become urgent at some stage, and that urgency correlates with the odds of passage, but it found little evidence that it speeds consideration of the president's agenda in Congress. This paper shows that the main reason behind the use of fast-track authority is not to speed legislation along, but instead to give presidents the ability to shield bills from floor amendments. Presidents' fast-track authority is similar to imposing a "closed rule". The paper tests hypotheses derived from a formal model of restrictive rules with data from the 1998--2014 period.
+\noindent Among Latin American presidents' formidable proactive legislative powers is fast-track authority, also called urgency authority. Seven presidents have this power. Lawmakers face a short deadline to discuss and vote bills in this track. While congressional inaction usually brings about some type of punishment for legislators, Chile stands out because such punishment does not exist. Yet research has shown that most executive bills become urgent at some stage, that urgency correlates with the odds of passage, but it found little evidence that it speeds consideration of the president's agenda in Congress. This paper shows that the main reason for using fast-track authority in Chile is not to speed legislation along, but instead to give presidents the ability to shield bills coming from ``friendly'' committees from floor amendments. Fast-track authority is therefore similar to imposing a ``closed rule'' on the floor. The paper tests hypotheses derived from a formal model of restrictive rules with data from the 1998--2014 period.
 \end{abstract}
 
 % comentarios de Calvo
@@ -192,7 +192,12 @@
 
 \section{Introduction}
 
-Fast-track authority gives presidents the power to set the agenda by imposing a requirement to hold a vote on a bill within a certain period of time, allowing the president to interfere with congress' voting schedule. More specifically, by using this prerogative, presidents can impose a deadline for legislators to discuss and vote legislation. Compared to the US presidential system, where an impatient president has no formal resources to push legislators to act on stagnant legislation, broad reaching fast-track authority seems to contradict classic notions of separation of powers. In Federalist 47, Madison argues that the ``magistrate in whom the whole executive power resides cannot of himself make a law, though he can put a negative on every law'' \citep{madison.47}. The Framers also warn against expediting lawmaking and arresting deliberation. ``In the legislature promptitude of decision is oftener an evil than a benefit'' \citep{hamilton70.1788}. Within this view presidents can veto bills, preventing them from becoming law, but cannot force legislators to act on specific measures.
+%VALE: ACA PRIMER PARRAO ABOUT: Presidents have legislative powers.  One of those decree powers. Another fast track authority. I do think the main difference between them is that in one case tey are not approved by congresss, while in the second they are.  This may have different implications.
+Fast-track authority gives presidents the power to set the agenda by imposing a requirement to hold a vote on a bill within a certain time period. The president interferes with congress' voting schedule and floor control when placing bills in this special track. More specifically, presidents can force plenary consideration of legislation by imposing a deadline to discuss and vote it.
+
+Fast-track authority seems to contradict classic notions of separation of powers. A ``classic'' president, when impatient, has no formal resources to press Congress to act on stagnant legislation. In Federalist 47, Madison argues that the ``magistrate in whom the whole executive power resides cannot of himself make a law, though he can put a negative on every law'' \citep{madison.47}. The Framers also warn against expediting lawmaking and arresting deliberation. ``In the legislature promptitude of decision is oftener an evil than a benefit'' \citep{hamilton70.1788}.
+
+%Within this view presidents can veto bills, preventing them from becoming law, but cannot force legislators to act on specific measures.
 
 %\ges{Here we need to make a footnote on the US, that in the US that does not apply for cases where Congress gave the president fast track authority, which has been mostly for Trade agreements with other nations. \\ Not happy about this quote yet, but I think is more appropriate than the previous one.  We need something about separation of powers.}
 
