Recovery worked, renames urge11 to urge13

--- a/gesValeriaEric/paper/urge11.tex
+++ b/gesValeriaEric/paper/urge11.tex
@@ -29,8 +29,8 @@
 \newcommand{\mc}{\multicolumn}
 
 %% TO ADD NOTES IN TEXT, PUT % BEFORE THE ONE YOU WANT DISABLED
-%\usepackage[disable]{todonotes}                            % notes not showed
-\usepackage[colorinlistoftodos, textsize=small]{todonotes} % show notes
+\usepackage[disable]{todonotes}                            % notes not showed
+%\usepackage[colorinlistoftodos, textsize=small]{todonotes} % show notes
 \newcommand{\emm}[1]{\todo[color=red!15, inline]{\textbf{Eric:} #1}}
 \newcommand{\vp}[1]{\todo[color=green!15, inline]{\textbf{Vale:} #1}}
 \newcommand{\ges}[1]{\todo[color=blue!15, inline]{\textbf{Ges:} #1}}
